[package]
name = "palma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking", "trace"] }
bevy_rapier2d = { version = "0.21", features = ["debug-render-2d", "simd-nightly"] }